// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogWindow should match the snapshot 1`] = `
<DialogWindow__StyledWindowWrapper>
  <Grid__StyledGridWrapper
    gridGap="0"
    padding="0"
  >
    <GridCol__StyledGridCol
      colXS={12}
    />
    <GridCol__StyledGridCol
      colXS={12}
    >
      <DialogContent />
    </GridCol__StyledGridCol>
    <GridCol__StyledGridCol
      colXS={12}
    >
      <DialogActions>
        <h1>
          Mock
        </h1>
      </DialogActions>
    </GridCol__StyledGridCol>
  </Grid__StyledGridWrapper>
</DialogWindow__StyledWindowWrapper>
`;

exports[`DialogWindow should match the snapshot with children 1`] = `
<DialogWindow__StyledWindowWrapper>
  <Grid__StyledGridWrapper
    gridGap="0"
    padding="0"
  >
    <GridCol__StyledGridCol
      colXS={12}
    />
    <GridCol__StyledGridCol
      colXS={12}
    >
      <DialogContent>
        <h1>
          Mock
        </h1>
      </DialogContent>
    </GridCol__StyledGridCol>
    <GridCol__StyledGridCol
      colXS={12}
    >
      <DialogActions>
        <h1>
          Mock
        </h1>
      </DialogActions>
    </GridCol__StyledGridCol>
  </Grid__StyledGridWrapper>
</DialogWindow__StyledWindowWrapper>
`;
